--- a/baitap1_dangky.html
+++ b/baitap1_dangky.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-    <form action="https://www.w3schools.com/action_page.php" target="_blank">
+    <form action="https://www.w3schools.com/action_page.php" target="_blank" method="post">
         <label for="ho_ten">Họ Tên:</label>
         <br>
         <input type="text" name="ho_ten" placeholder="ví dụ: levana" required>
