updatebaitap1va bai2

--- a/baitap1_dangky.html
+++ b/baitap1_dangky.html
@@ -10,15 +10,15 @@
     <form action="https://www.w3schools.com/action_page.php" target="_blank" method="post">
         <label for="ho_ten">Họ Tên:</label>
         <br>
-        <input type="text" name="ho_ten" placeholder="ví dụ: levana" required>
+        <input type="text" name="ho_ten" id="ho_ten" placeholder="ví dụ: levana" required>
         <br>
         <label for="Email">Email:</label>
         <br>
-        <input type="email" name="Email" placeholder="Ví dụ: levana@gmail.com" required maxlength="50">
+        <input type="email" name="Email" id="Email" placeholder="Ví dụ: levana@gmail.com" required maxlength="50">
         <br>
-        <label for="password">Password:</label>
+        <label for="password">Mật Khẩu:</label>
         <br>
-        <input type="password" name="password" required>
+        <input type="password" name="password" id="pasword" required>
         <br>
         <br>
         <input type="submit" value="Đăng Ký" >
